--- a/aaaaaa/style.css
+++ b/aaaaaa/style.css
@@ -1,7 +1,7 @@
-body{
-    background-image:url("flores.png" width: 1280px;
-        height: 1024px;);
-     background-color: rgb( 205, 255, 209);
+body{ 
+    background-color: rgb( 205, 255, 209);
+    background-image:url("flores.png");
+    
 }
 
 div{
