--- a/aaaaaa/style.css
+++ b/aaaaaa/style.css
@@ -1,14 +1,14 @@
 body{ 
     background-color: rgb( 205, 255, 209);
-    background-image:url("flores.png" width: 400px;
-        height: 600px ;);
+    background-image:url("flores.png");
     
 }
 
 div{
     display:inline-block; 
     float: left;
-    margin:0 auto;
+    display: flex;
+  justify-content: center;
 }
     #texto{
         width: 400px;
