--- a/aaaaaa/style.css
+++ b/aaaaaa/style.css
@@ -13,9 +13,9 @@ p,h1{
 }
 
     #texto{  
-       /* text-align: center;
+        text-align: center;
         float: left;
-        width: 55%;*/
+        /*width: 55%;*/
         width: 400px;
         height: 400px ;
         background-color: rgb(75, 11, 75);
@@ -26,8 +26,8 @@ p,h1{
         padding-bottom: 10px;
     }
     #foto{
-        /*width: 40%;
-        float: right;*/
+        /*width: 40%;*/
+        float: right;
         width: 400px;
         height: 400px;
         padding: 10px;
