--- a/aaaaaa/style.css
+++ b/aaaaaa/style.css
@@ -5,6 +5,11 @@ body{
 }
 header{
 	background-color:rgb(60, 226, 248);
+	paddind: 15px;
+	border-radius:25px;
+	width: 400px;
+        height: 400px ;
+	margin:auto;
 }
 p,h1{
 	font-style:italic;
