--- a/aaaaaa/style.css
+++ b/aaaaaa/style.css
@@ -3,13 +3,8 @@ body{
     background-image:url("flores.png");
     
 }
-header{
-	background-color:rgb(60, 226, 248);
-	paddind: 15px;
-	border-radius:25px;
-	width: 400px;
-        height: 400px ;
-	margin:auto;
+#titulo{
+	background-color:rgb(0, 100, 0);
 }
 p,h1{
 	font-style:italic;
@@ -18,10 +13,10 @@ main{
 	width: 60%;
 	margin:auto;
 }
-div{
+ /*div{
     display:inline-block; 
     float: left;
-}
+}*/
     #texto{
         width: 400px;
         height: 400px ;
@@ -31,6 +26,7 @@ div{
         padding-left: 10px;
         padding-top: 10px;
         padding-bottom: 10px;
+	float:right;
     }
     #foto{
         width: 400px;
@@ -38,6 +34,8 @@ div{
         padding: 10px;
         border-radius: 25px;
         background-color: rgb(75, 11, 75);
+	float:left;
+	    
     }
 
 img{
