--- a/pagina/style.css
+++ b/pagina/style.css
@@ -1,7 +1,7 @@
 body{ 
  
     background-color: rgb(230, 154, 119); 		 
-    background-image:url("aaaaaa/flores.png");
+    background-image:url("/imagens/flores.png");
             color: rgb(63, 40, 31);
 }
 
