--- a/pagina/style.css
+++ b/pagina/style.css
@@ -1,5 +1,6 @@
 body{ 
- 
+    margin: 0;
+    font-family: Arial, sans-serif; 
     background-color: rgb(230, 154, 119); 		 
     background-image:url("/imagens/flores.png");
             color: rgb(63, 40, 31);
@@ -37,6 +38,25 @@ p,h1{
 	    
     }
 
-img{
+.carousel-container {
+    width: 100%;
+    overflow: hidden;
+}
+
+.carousel-slide {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100vh;
+    transition: transform 0.5s ease-in-out;
+}
+
+.content {
+    text-align: center;
+}
+
+img {
     max-width: 100%;
+    max-height: 80vh;
 }
