--- a/style.css
+++ b/style.css
@@ -14,23 +14,22 @@ header{
     border-radius: 25px;
    }
    
-
-.carousel-container {
+   .carousel-container {
     width: 100%;
     overflow: hidden;
 }
 
 .carousel-slide {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 100vh;
-    transition: transform 0.5s ease-in-out;
+    display: none;
 }
 
-.content {
-    text-align: center;
+img {
+    max-width: 700px;
+    max-height: 100vh;
+    width: auto;
+    height: auto;
+    margin: 0 auto;
+    display: block;
 }
 
 img {
